@@ -1,6 +1,9 @@
 package org.techbd.service;
 
 import java.io.IOException;
+import java.io.UnsupportedEncodingException;
+import java.net.URLEncoder;
+import java.nio.charset.StandardCharsets;
 import java.time.Duration;
 import java.time.Instant;
 import java.time.OffsetDateTime;
@@ -10,6 +13,7 @@ import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
 import java.util.UUID;
+import java.util.concurrent.atomic.AtomicInteger;
 import java.util.stream.Collectors;
 
 import org.apache.commons.collections.CollectionUtils;
@@ -31,11 +35,13 @@ import org.techbd.service.converters.csv.CsvToFhirConverter;
 import org.techbd.service.http.hub.prime.api.FHIRService;
 import org.techbd.udi.UdiPrimeJpaConfig;
 import org.techbd.udi.auto.jooq.ingress.routines.RegisterInteractionHttpRequest;
+import org.techbd.udi.auto.jooq.ingress.routines.SatInteractionCsvRequestUpserted;
 import org.techbd.util.CsvConversionUtil;
 
 import com.fasterxml.jackson.databind.JsonNode;
 
 import io.micrometer.common.util.StringUtils;
+import jakarta.servlet.http.Cookie;
 import jakarta.servlet.http.HttpServletRequest;
 import jakarta.servlet.http.HttpServletResponse;
 
@@ -45,6 +51,7 @@ public class CsvBundleProcessorService {
     private final CsvToFhirConverter csvToFhirConverter;
     private final FHIRService fhirService;
     private final UdiPrimeJpaConfig udiPrimeJpaConfig;
+    private static final String START_TIME_ATTRIBUTE = "startTime";
 
     public CsvBundleProcessorService(final CsvToFhirConverter csvToFhirConverter, final FHIRService fhirService,
             final UdiPrimeJpaConfig udiPrimeJpaConfig) {
@@ -55,12 +62,13 @@ public class CsvBundleProcessorService {
 
     public List<Object> processPayload(final String masterInteractionId,
             final Map<String, PayloadAndValidationOutcome> payloadAndValidationOutcomes,
-            List<String> filesNotProcessed,
-            HttpServletRequest request,
-            HttpServletResponse response,
-            String tenantId, String originalFileName) {
+            final List<String> filesNotProcessed,
+            final HttpServletRequest request,
+            final HttpServletResponse response,
+            final String tenantId, final String originalFileName) {
         final List<Object> resultBundles = new ArrayList<>();
-
+        final List<Object> miscErrors = new ArrayList<>();
+        boolean isAllCsvConvertedToFhir = true;
         for (final var entry : payloadAndValidationOutcomes.entrySet()) {
             final String groupKey = entry.getKey();
             final PayloadAndValidationOutcome outcome = entry.getValue();
@@ -95,28 +103,70 @@ public class CsvBundleProcessorService {
                         resultBundles.addAll(processScreening(groupKey, demographicData, screeningProfileData,
                                 qeAdminData, screeningObservationData, request, response, groupInteractionId,
                                 masterInteractionId,
-                                tenantId, outcome.isValid(), outcome));
+                                tenantId, outcome.isValid(), outcome, isAllCsvConvertedToFhir));
                     }
                 } else {
+                    isAllCsvConvertedToFhir = false;
                     resultBundles.add(outcome.validationResults());
                 }
-            } catch (Exception e) {
+            } catch (final Exception e) {
                 LOG.error("Error processing payload: " + e.getMessage(), e);
-                resultBundles.add(
-                        createOperationOutcomeForError(masterInteractionId, groupInteractionId, "", "", e, provenance));
+                final Map<String, Object> errors = createOperationOutcomeForError(masterInteractionId, groupInteractionId, "",
+                        "", e, provenance);
+                resultBundles.add(errors);
+                miscErrors.add(errors);
+                isAllCsvConvertedToFhir = false;
             }
         }
         if (CollectionUtils.isNotEmpty(filesNotProcessed)) {
-            resultBundles
-                    .add(createOperationOutcomeForFileNotProcessed(masterInteractionId,  filesNotProcessed,
-                            originalFileName));
+            final Map<String, Object> fileNotProcessedError = createOperationOutcomeForFileNotProcessed(masterInteractionId,
+                    filesNotProcessed,
+                    originalFileName);
+            resultBundles.add(fileNotProcessedError);
+            miscErrors.add(fileNotProcessedError);
+            isAllCsvConvertedToFhir = false;
         }
+        saveMiscErrorAndStatus(miscErrors, isAllCsvConvertedToFhir, masterInteractionId, request);
+        addObservabilityHeadersToResponse(request, response);
         return resultBundles;
     }
 
-    public String addBundleProvenance(Map<String, Object> existingProvenance, List<String> bundleGeneratedFrom,
-            String patientMrnId, String encounterId, Instant initiatedAt, Instant completedAt) throws Exception {
-        Map<String, Object> newProvenance = new HashMap<>();
+    private void saveMiscErrorAndStatus(final List<Object> miscError, final boolean allCSvConvertedToFHIR,
+            final String masterInteractionId, final HttpServletRequest request) {
+        LOG.info("SaveMiscErrorAndStatus: BEGIN for inteaction id  : {} ",
+                masterInteractionId);
+        final var status = allCSvConvertedToFHIR ? "PROCESSED_SUCESSFULLY" : "PARTIALLY_PROCESSED";
+        final var dslContext = udiPrimeJpaConfig.dsl();
+        final var jooqCfg = dslContext.configuration();
+        final var createdAt = OffsetDateTime.now();
+        final var initRIHR = new SatInteractionCsvRequestUpserted();
+        try {
+            initRIHR.setStatus(status);    
+            initRIHR.setInteractionId(masterInteractionId);
+            initRIHR.setUri(request.getRequestURI());
+            initRIHR.setNature("Update Zip File Processing Details");
+            initRIHR.setCreatedAt(createdAt);
+            initRIHR.setCreatedBy(CsvService.class.getName());
+            initRIHR.setZipFileProcessingErrors(CollectionUtils.isNotEmpty(miscError) ?
+                    (JsonNode) Configuration.objectMapper.valueToTree(miscError):null);
+            final var start = Instant.now();
+            final var execResult = initRIHR.execute(jooqCfg);
+            final var end = Instant.now();
+            LOG.info(
+                    "SaveMiscErrorAndStatus : END for interaction id : {} .Time taken : {} milliseconds"
+                            + execResult,
+                    masterInteractionId,
+                    Duration.between(start, end).toMillis());
+        } catch (final Exception e) {
+            LOG.error("ERROR:: SaveMiscErrorAndStatus CALL for interaction id : {} "
+                    + initRIHR.getName() + " initRIHR error", masterInteractionId,
+                    e);
+        }
+    }
+
+    public String addBundleProvenance(final Map<String, Object> existingProvenance, final List<String> bundleGeneratedFrom,
+            final String patientMrnId, final String encounterId, final Instant initiatedAt, final Instant completedAt) throws Exception {
+        final Map<String, Object> newProvenance = new HashMap<>();
         newProvenance.put("resourceType", "Provenance");
         newProvenance.put("description",
                 "Bundle created from provided files for the given patientMrnId and encounterId");
@@ -125,22 +175,23 @@ public class CsvBundleProcessorService {
         newProvenance.put("completedAt", completedAt.toString());
         newProvenance.put("patientMrnId", patientMrnId);
         newProvenance.put("encounterId", encounterId);
-        Map<String, Object> agent = new HashMap<>();
-        Map<String, String> whoCoding = new HashMap<>();
+        final Map<String, Object> agent = new HashMap<>();
+        final Map<String, String> whoCoding = new HashMap<>();
         whoCoding.put("system", "generator");
         whoCoding.put("display", "TechByDesign");
         agent.put("who", Collections.singletonMap("coding", List.of(whoCoding)));
         newProvenance.put("agent", List.of(agent));
-        List<Map<String, Object>> provenanceList = new ArrayList<>();
+        final List<Map<String, Object>> provenanceList = new ArrayList<>();
         provenanceList.add(existingProvenance);
         provenanceList.add(newProvenance);
         return Configuration.objectMapper.writeValueAsString(provenanceList);
     }
 
-    public void addHapiFhirValidation(Map<String, Object> provenance, String validationDescription) {
+    public void addHapiFhirValidation(final Map<String, Object> provenance, final String validationDescription) {
         @SuppressWarnings("unchecked")
+        final
         Map<String, Object> agent = new HashMap<>();
-        Map<String, String> whoCoding = new HashMap<>();
+        final Map<String, String> whoCoding = new HashMap<>();
 
         whoCoding.put("system", "Validator");
         whoCoding.put("display", "HAPI FHIR Validation");
@@ -151,9 +202,9 @@ public class CsvBundleProcessorService {
                 "description", validationDescription));
     }
 
-    private void saveConvertedFHIR(boolean isValid, String masterInteractionId, String groupKey,
-            String groupInteractionId,String interactionId, final HttpServletRequest request,
-            final String payload,
+    private void saveFhirConversionStatus(final boolean isValid, final String masterInteractionId, final String groupKey,
+            final String groupInteractionId, final String interactionId, final HttpServletRequest request,
+            final String payload, final Map<String, Object> operationOutcome,
             final String tenantId) {
         LOG.info(
                 "REGISTER State CONVERTED_TO_FHIR : BEGIN for master InteractionId :{} group interaction id  : {} tenant id : {}",
@@ -172,7 +223,9 @@ public class CsvBundleProcessorService {
                     Map.of("nature", "Converted to FHIR", "tenant_id",
                             tenantId)));
             initRIHR.setContentType(MimeTypeUtils.APPLICATION_JSON_VALUE);
-            initRIHR.setPayload(Configuration.objectMapper.readTree(payload));
+            initRIHR.setPayload(null != operationOutcome && operationOutcome.size() > 0
+                    ? Configuration.objectMapper.valueToTree(operationOutcome)
+                    : Configuration.objectMapper.readTree(payload));
             initRIHR.setCreatedAt(forwardedAt);
             initRIHR.setCreatedBy(CsvService.class.getName());
             initRIHR.setFromState(isValid ? "VALIDATION SUCCESS" : "VALIDATION FAILED");
@@ -204,7 +257,7 @@ public class CsvBundleProcessorService {
             final Map<String, List<QeAdminData>> qeAdminData,
             final Map<String, List<ScreeningObservationData>> screeningObservationData) {
 
-        StringBuilder missingDataMessage = new StringBuilder("The following required data maps are missing or empty: ");
+        final StringBuilder missingDataMessage = new StringBuilder("The following required data maps are missing or empty: ");
 
         boolean isAnyMissing = false;
 
@@ -232,23 +285,25 @@ public class CsvBundleProcessorService {
         }
     }
 
-    private List<Object> processScreening(String groupKey,
+    private List<Object> processScreening(final String groupKey,
             final Map<String, List<DemographicData>> demographicData,
             final Map<String, List<ScreeningProfileData>> screeningProfileData,
             final Map<String, List<QeAdminData>> qeAdminData,
             final Map<String, List<ScreeningObservationData>> screeningObservationData,
-            HttpServletRequest request,
-            HttpServletResponse response,
-            String groupInteractionId,
-            String masterInteractionId,
-            String tenantId, boolean isValid, PayloadAndValidationOutcome payloadAndValidationOutcome)
+            final HttpServletRequest request,
+            final HttpServletResponse response,
+            final String groupInteractionId,
+            final String masterInteractionId,
+            final String tenantId, final boolean isValid, final PayloadAndValidationOutcome payloadAndValidationOutcome,
+            boolean isAllCsvConvertedToFhir)
             throws IOException {
 
-        List<Object> results = new ArrayList<>();
-
+        final List<Object> results = new ArrayList<>();
+        final AtomicInteger errorCount = new AtomicInteger();
         screeningProfileData.forEach((encounterId, profileList) -> {
-            for (ScreeningProfileData profile : profileList) {
+            for (final ScreeningProfileData profile : profileList) {
                 final String interactionId = UUID.randomUUID().toString();
+                String bundle = null;
                 try {
                     final List<DemographicData> demographicList = demographicData.getOrDefault(
                             profile.getPatientMrIdValue(),
@@ -259,26 +314,27 @@ public class CsvBundleProcessorService {
                             .getOrDefault(profile.getEncounterId(), List.of());
 
                     if (demographicList.isEmpty() || qeAdminList.isEmpty() || screeningObservationList.isEmpty()) {
-                        String errorMessage = String.format(
+                        final String errorMessage = String.format(
                                 "Data missing in one or more files for patientMrIdValue: %s",
                                 profile.getPatientMrIdValue());
                         LOG.error(errorMessage);
                         throw new IllegalArgumentException(errorMessage);
                     }
-                    Instant initiatedAt = Instant.now();
-                    final var bundle = csvToFhirConverter.convert(
+                    final Instant initiatedAt = Instant.now();
+                    bundle = csvToFhirConverter.convert(
                             demographicList.get(0),
                             qeAdminList.get(0),
                             profile,
                             screeningObservationList,
                             interactionId);
-                    Instant completedAt = Instant.now();
+                    final Instant completedAt = Instant.now();
                     if (bundle != null) {
-                        String updatedProvenance = addBundleProvenance(payloadAndValidationOutcome.provenance(),
+                        final String updatedProvenance = addBundleProvenance(payloadAndValidationOutcome.provenance(),
                                 getFileNames(payloadAndValidationOutcome.fileDetails()),
                                 profile.getPatientMrIdValue(), profile.getEncounterId(), initiatedAt, completedAt);
-                        saveConvertedFHIR(isValid, masterInteractionId, groupKey, groupInteractionId,interactionId, request,
-                                bundle, tenantId);
+                        saveFhirConversionStatus(isValid, masterInteractionId, groupKey, groupInteractionId,
+                                interactionId, request,
+                                bundle, null, tenantId);
                         results.add(fhirService.processBundle(
                                 bundle, tenantId, null, null, null, null, null,
                                 Boolean.toString(false), false,
@@ -286,28 +342,40 @@ public class CsvBundleProcessorService {
                                 request, response,
                                 updatedProvenance,
                                 true, null, interactionId, groupInteractionId,
-                                masterInteractionId, SourceType.CSV.name(),null));
+                                masterInteractionId, SourceType.CSV.name(), null));
                     } else {
-                        results.add(createOperationOutcomeForError(masterInteractionId, interactionId,
+                        errorCount.incrementAndGet();
+                        final Map<String, Object> result = createOperationOutcomeForError(masterInteractionId, interactionId,
                                 profile.getPatientMrIdValue(), profile.getEncounterId(),
                                 new Exception("Bundle not created"),
-                                payloadAndValidationOutcome.provenance()));
+                                payloadAndValidationOutcome.provenance());
+                        results.add(result);
+                        saveFhirConversionStatus(isValid, masterInteractionId, groupKey, groupInteractionId,
+                                interactionId, request,
+                                bundle, result, tenantId);
                     }
                 } catch (final Exception e) {
+                    errorCount.incrementAndGet();
+                    final Map<String, Object> result = createOperationOutcomeForError(masterInteractionId, interactionId,
+                            profile.getPatientMrIdValue(), profile.getEncounterId(), e,
+                            payloadAndValidationOutcome.provenance());
                     LOG.error(String.format(
                             "Error processing patient data for MrId: %s, interactionId: %s, Error: %s",
                             profile.getPatientMrIdValue(), interactionId, e.getMessage()), e);
-                    results.add(createOperationOutcomeForError(masterInteractionId, interactionId,
-                            profile.getPatientMrIdValue(), profile.getEncounterId(), e,
-                            payloadAndValidationOutcome.provenance()));
+                    results.add(result);
+                    saveFhirConversionStatus(isValid, masterInteractionId, groupKey, groupInteractionId, interactionId,
+                            request,
+                            bundle, result, tenantId);
                 }
             }
         });
-
+        if (errorCount.get() > 0) {
+            isAllCsvConvertedToFhir = false;
+        }
         return results;
     }
 
-    public static List<String> getFileNames(List<FileDetail> fileDetails) {
+    public static List<String> getFileNames(final List<FileDetail> fileDetails) {
         if (fileDetails != null) {
             return fileDetails.stream()
                     .map(FileDetail::filename)
@@ -322,19 +390,24 @@ public class CsvBundleProcessorService {
             final String patientMrIdValue,
             final String encounterId,
             final Exception e,
-            Map<String, Object> provenance) {
-        OperationOutcome operationOutcome = new OperationOutcome();
-        OperationOutcome.OperationOutcomeIssueComponent issue = operationOutcome.addIssue();
-        issue.setSeverity(OperationOutcome.IssueSeverity.ERROR);
-        issue.setCode(OperationOutcome.IssueType.EXCEPTION);
-        issue.setDiagnostics(
-                "Error processing data for Master Interaction ID: " + masterInteractionId +
-                        ", Interaction ID: " + groupInteractionId +
-                        ", Patient MRN: " + patientMrIdValue +
-                        ", EncounterID : " + encounterId +
-                        ", Error: " + e.getMessage());
+            final Map<String, Object> provenance) {
+        if (e == null) {
+            return Collections.emptyMap();
+        }
 
-        // Construct the desired structure with validationResults
+        final String diagnosticsMessage = "Error processing data for Master Interaction ID: " + masterInteractionId +
+                ", Interaction ID: " + groupInteractionId +
+                ", Patient MRN: " + patientMrIdValue +
+                ", EncounterID : " + encounterId +
+                ", Error: " + e.getMessage();
+
+        final String remediationMessage = "Error processing data.";
+
+        final Map<String, Object> errorDetails = Map.of(
+                "type", "processing-error",
+                "description", remediationMessage,
+                "message", diagnosticsMessage);
+
         return Map.of(
                 "masterInteractionId", masterInteractionId,
                 "groupInteractionId", groupInteractionId,
@@ -342,52 +415,72 @@ public class CsvBundleProcessorService {
                 "encounterId", encounterId,
                 "provenance", provenance,
                 "validationResults", Map.of(
-                        "issue", List.of(Map.of(
-                                "severity", "ERROR",
-                                "code", "EXCEPTION",
-                                "diagnostics",
-                                "Error processing data for Master Interaction ID: " + masterInteractionId +
-                                        ", Interaction ID: " + groupInteractionId +
-                                        ", Patient MRN: " + patientMrIdValue +
-                                        ", EncounterID : " + encounterId +
-                                        ", Error: " + e.getMessage())),
+                        "errors", List.of(errorDetails),
                         "resourceType", "OperationOutcome"));
     }
 
     private Map<String, Object> createOperationOutcomeForFileNotProcessed(
             final String masterInteractionId,
-            final List<String> filesNotProcessed, String originalFileName) {
-        OperationOutcome operationOutcome = new OperationOutcome();
-        OperationOutcome.OperationOutcomeIssueComponent issue = operationOutcome.addIssue();
-        issue.setSeverity(OperationOutcome.IssueSeverity.ERROR);
-        issue.setCode(OperationOutcome.IssueType.NOTFOUND);
-
-        StringBuilder diagnosticsMessage = new StringBuilder();
-
-        if (filesNotProcessed != null && !filesNotProcessed.isEmpty()) {
-            diagnosticsMessage.append("Files not processed: in input zip file : ");
-            diagnosticsMessage.append(String.join(", ", filesNotProcessed));
-            StringBuilder remediation = new StringBuilder();
-            remediation.append("Filenames must start with one of the following prefixes: ");
-            for (FileType type : FileType.values()) {
-                remediation.append(type.name()).append(", ");
-            }
-            if (remediation.length() > 0) {
-                remediation.setLength(remediation.length() - 2);
-            }
-            Map<String, Object> issueDetails = Map.of(
-                    "severity", "ERROR",
-                    "code", "NOTFOUND",
-                    "diagnostics", diagnosticsMessage.toString(),
-                    "remediation", remediation.toString());
-
-            return Map.of(
-                    "masterInteractionId", masterInteractionId,
-                    "originalFileName", originalFileName,
-                    "validationResults", Map.of(
-                            "issue", List.of(issueDetails),
-                            "resourceType", "OperationOutcome"));
+            final List<String> filesNotProcessed, final String originalFileName) {
+        if (filesNotProcessed == null || filesNotProcessed.isEmpty()) {
+            return Collections.emptyMap();
         }
-        return Collections.emptyMap();
+
+        final StringBuilder diagnosticsMessage = new StringBuilder("Files not processed: in input zip file : ");
+        diagnosticsMessage.append(String.join(", ", filesNotProcessed));
+
+        final StringBuilder remediation = new StringBuilder("Filenames must start with one of the following prefixes: ");
+        for (final FileType type : FileType.values()) {
+            remediation.append(type.name()).append(", ");
+        }
+        if (remediation.length() > 0) {
+            remediation.setLength(remediation.length() - 2); // Remove trailing comma and space
+        }
+
+        final Map<String, Object> errorDetails = Map.of(
+                "type", "files-not-processed",
+                "description", remediation.toString(),
+                "message", diagnosticsMessage.toString());
+
+        return Map.of(
+                "masterInteractionId", masterInteractionId,
+                "originalFileName", originalFileName,
+                "validationResults", Map.of(
+                        "errors", List.of(errorDetails),
+                        "resourceType", "OperationOutcome"));
     }
+   private void addObservabilityHeadersToResponse(final HttpServletRequest request, final HttpServletResponse response) {
+                final var startTime = (Instant) request.getAttribute(START_TIME_ATTRIBUTE);
+                final var finishTime = Instant.now();
+                final Duration duration = Duration.between(startTime, finishTime);
+
+                final String startTimeText = startTime.toString();
+                final String finishTimeText = finishTime.toString();
+                final String durationMsText = String.valueOf(duration.toMillis());
+                final String durationNsText = String.valueOf(duration.toNanos());
+
+                // set response headers for those clients that can access HTTP headers
+                response.addHeader("X-Observability-Metric-Interaction-Start-Time", startTimeText);
+                response.addHeader("X-Observability-Metric-Interaction-Finish-Time", finishTimeText);
+                response.addHeader("X-Observability-Metric-Interaction-Duration-Nanosecs", durationMsText);
+                response.addHeader("X-Observability-Metric-Interaction-Duration-Millisecs", durationNsText);
+
+                // set a cookie which is accessible to a JavaScript user agent that cannot
+                // access HTTP headers (usually HTML pages in web browser cannot access HTTP
+                // response headers)
+                try {
+                        final var metricCookie = new Cookie("Observability-Metric-Interaction-Active",
+                                        URLEncoder.encode("{ \"startTime\": \"" + startTimeText
+                                                        + "\", \"finishTime\": \"" + finishTimeText
+                                                        + "\", \"durationMillisecs\": \"" + durationMsText
+                                                        + "\", \"durationNanosecs\": \""
+                                                        + durationNsText + "\" }", StandardCharsets.UTF_8.toString()));
+                        metricCookie.setPath("/"); // Set path as required
+                        metricCookie.setHttpOnly(false); // Ensure the cookie is accessible via JavaScript
+                        response.addCookie(metricCookie);
+                } catch (final UnsupportedEncodingException ex) {
+                        LOG.error("Exception during setting  Observability-Metric-Interaction-Active cookie to response header",
+                                        ex);
+                }
+        }
 }
